// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository/update/pr/changelog/gitlab getChangeLogJSON handles empty GitLab tags response 1`] = `
{
  "hasReleaseNotes": false,
  "project": {
    "apiBaseUrl": "https://gitlab.com/api/v4/",
    "baseUrl": "https://gitlab.com/",
    "depName": "renovate",
    "repository": "meno/dropzone",
    "sourceDirectory": undefined,
    "sourceUrl": "https://gitlab.com/meno/dropzone/",
    "type": "gitlab",
  },
  "versions": [
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2020-02-13T15:37:00.000Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.6.0",
    },
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": "eba303e91c930292198b2fc57040145682162a1b",
      "releaseNotes": null,
      "version": "5.5.0",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2018-08-24T14:23:00.000Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/repository/update/pr/changelog/gitlab getChangeLogJSON supports gitlab enterprise and gitlab enterprise changelog 1`] = `
{
  "hasReleaseNotes": false,
  "project": {
    "apiBaseUrl": "https://gitlab-enterprise.example.com/api/v4/",
    "baseUrl": "https://gitlab-enterprise.example.com/",
    "depName": "renovate",
    "repository": "meno/dropzone",
    "sourceDirectory": undefined,
    "sourceUrl": "https://gitlab-enterprise.example.com/meno/dropzone/",
    "type": "gitlab",
  },
  "versions": [
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2020-02-13T15:37:00.000Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.6.0",
    },
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": "eba303e91c930292198b2fc57040145682162a1b",
      "releaseNotes": null,
      "version": "5.5.0",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2018-08-24T14:23:00.000Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/repository/update/pr/changelog/gitlab getChangeLogJSON supports self-hosted gitlab changelog 1`] = `
{
  "hasReleaseNotes": false,
  "project": {
    "apiBaseUrl": "https://git.test.com/api/v4/",
    "baseUrl": "https://git.test.com/",
    "depName": "renovate",
    "repository": "meno/dropzone",
    "sourceDirectory": undefined,
    "sourceUrl": "https://git.test.com/meno/dropzone/",
    "type": "gitlab",
  },
  "versions": [
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2020-02-13T15:37:00.000Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.6.0",
    },
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": "eba303e91c930292198b2fc57040145682162a1b",
      "releaseNotes": null,
      "version": "5.5.0",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2018-08-24T14:23:00.000Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/repository/update/pr/changelog/gitlab getChangeLogJSON uses GitLab tags 1`] = `
{
  "hasReleaseNotes": true,
  "project": {
    "apiBaseUrl": "https://gitlab.com/api/v4/",
    "baseUrl": "https://gitlab.com/",
    "depName": "renovate",
    "repository": "meno/dropzone",
    "sourceDirectory": undefined,
    "sourceUrl": "https://gitlab.com/meno/dropzone/",
    "type": "gitlab",
  },
  "versions": [
    {
      "changes": [],
      "compare": {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.6.0...v5.6.1",
      },
      "date": undefined,
      "gitRef": undefined,
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://gitlab.com/meno/dropzone/compare/v5.6.0...v5.6.1",
      },
      "version": "5.6.1",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.5.0...v5.6.0",
      },
      "date": "2020-02-13T15:37:00.000Z",
      "gitRef": undefined,
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://gitlab.com/meno/dropzone/compare/v5.5.0...v5.6.0",
      },
      "version": "5.6.0",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.4.0...v5.5.0",
      },
      "date": undefined,
      "gitRef": "eba303e91c930292198b2fc57040145682162a1b",
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://gitlab.com/meno/dropzone/compare/v5.4.0...v5.5.0",
      },
      "version": "5.5.0",
    },
    {
      "changes": [],
      "compare": {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.2.0...v5.4.0",
      },
      "date": "2018-08-24T14:23:00.000Z",
      "gitRef": undefined,
      "releaseNotes": {
        "notesSourceUrl": "",
        "url": "https://gitlab.com/meno/dropzone/compare/v5.2.0...v5.4.0",
      },
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/repository/update/pr/changelog/gitlab getChangeLogJSON uses GitLab tags with error 1`] = `
{
  "hasReleaseNotes": false,
  "project": {
    "apiBaseUrl": "https://gitlab.com/api/v4/",
    "baseUrl": "https://gitlab.com/",
    "depName": "renovate",
    "repository": "meno/dropzone",
    "sourceDirectory": undefined,
    "sourceUrl": "https://gitlab.com/meno/dropzone/",
    "type": "gitlab",
  },
  "versions": [
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2020-02-13T15:37:00.000Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.6.0",
    },
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": "eba303e91c930292198b2fc57040145682162a1b",
      "releaseNotes": null,
      "version": "5.5.0",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2018-08-24T14:23:00.000Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/repository/update/pr/changelog/gitlab getChangeLogJSON works without GitLab 1`] = `
{
  "hasReleaseNotes": false,
  "project": {
    "apiBaseUrl": "https://gitlab.com/api/v4/",
    "baseUrl": "https://gitlab.com/",
    "depName": "renovate",
    "repository": "meno/dropzone",
    "sourceDirectory": undefined,
    "sourceUrl": "https://gitlab.com/meno/dropzone/",
    "type": "gitlab",
  },
  "versions": [
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2020-02-13T15:37:00.000Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.6.0",
    },
    {
      "changes": [],
      "compare": {},
      "date": undefined,
      "gitRef": "eba303e91c930292198b2fc57040145682162a1b",
      "releaseNotes": null,
      "version": "5.5.0",
    },
    {
      "changes": [],
      "compare": {},
      "date": "2018-08-24T14:23:00.000Z",
      "gitRef": undefined,
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;
